Added ProxyURL helper method